# faissx

./: .gitignore  CHANGELOG.md  MANIFEST.in  NEXT_STEPS.md  README.md  build_config.py  build_debug.sh  cleanup.sh  client_test.py  dev-requirements.txt  docker-compose.yml  implementation_plan.md  prd-faiss-proxy.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  start.sh  stop.sh  test_zmq_server.sh
.github/workflows/: ci.yml  docker-build-publish.yml  rc.yml  release.yml
client/: CHANGES.md  README.md  SERVER_PORT_FIX.md  SUMMARY.md  debug_connection.py  direct_idmap_test.py  run_remote_tests.sh  run_tests.sh  setup.py  simple_client.py  test_connection.py  test_get_client.py  test_idmap_remote.py  test_remote_no_fallback.py
client/faiss_proxy/: __init__.py  client.py  index.py
client/tests/: README.md  direct_remote_test.py  remote_server_test.py  requirements.txt  simple.py  test_basic.py  test_dynamic_timeout.py  test_idmap_simple.py  test_local.py  test_optimized_client.py  test_timeout.py  test_timeout_global.py  test_timeout_module.py
client/tests/indices/: test_binary_flat.py  test_flat_index.py  test_scalar_quantizer_optimized.py
client/tests/local-mode/: README.md  run_tests.py  test_index_flat.py  test_index_hnsw.py  test_index_idmap.py  test_index_ivf.py  (+2 more)
examples/: README.md  batch_operations_example.py  client_placeholder.py  combined_optimization_recovery_example.py  index_idmap_example.py  index_ivf_parameters_example.py  index_ivfpq_example.py  index_modification_example.py  index_scalar_quantizer_example.py  optimization_example.py  range_search_example.py  recovery_example.py  server_example.py
faiss_proxy/: __init__.py
faiss_proxy/client/: __init__.py
faiss_proxy/server/: __init__.py  auth.py  cli.py  faiss_core.py  protocol.py  server.py
faissx/: .version  __init__.py
faissx/client/: __init__.py  client.py  client.py.bkup  index.py  optimization.py  recovery.py  timeout.py  transforms.py
faissx/server/: __init__.py  auth.py  binary.py  cli.py  core.py  faiss_core.py  get_parameter.py  hnsw.py  hybrid.py  logging.py  persistence.py  protocol.py  response.py  server.py  specialized_operations.py  training.py  transformations.py
notes/: MODIFICATION_OPTIMIZATION.md  OPTIMIZATIONS.md  PQ_OPTIMIZATION.md  README.md  SERVER_IMPROVEMENTS.md  prd-optimize-persistence-layer.md
requirements/: build.txt
server/: Dockerfile  Dockerfile.dev  Dockerfile.pypy  Dockerfile.simple  README.md  README_ZMQ.md  REORGANIZATION.md  ZMQ_README.md  build_docker.sh  pyoxidizer.bzl  requirements.txt  run_server.py  run_zmq_tests.sh  setup.py  test_client.py
server/app/: __init__.py  main.py
server/tests/: README.md  conftest.py  conftest_zmq.py  requirements.txt  simple_server_test.py  simple_test.py  test_binary_indices.py  test_server_improvements.py  test_transformations.py
tests/: auth_keys.json  conftest.py  test_advanced_features.py  test_all_index_types.py  test_build_config.py  test_client_io.py  test_client_optimizations.py  test_client_timeout.py  test_fixed_indices.py  test_ntotal.py  test_reconstruction.py  test_server_auth.py  test_server_data_dir_persistence.py  test_specialized_ops.py
tests/client_indices/: test_binary_flat.py  test_flat_index.py  test_hnsw_modes.py  test_ivf_pq_optimized.py  test_ivf_sq_optimized.py  test_pq_optimized.py  test_pre_transform.py  test_scalar_quantizer.py  test_scalar_quantizer_optimized.py
(+70 files in other folders)
